--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Documento sin t&iacute;tulo</title>
 </head>
 <script type="text/javascript">
-    document.location = "http://172.29.14.62/SCAP2.0/index.php";
+    document.location = "http://10.28.9.24/APP_SCAP/index.php";
 </script> 
 <body>
 
